--- a/web/ex05/templates/menu.html
+++ b/web/ex05/templates/menu.html
@@ -2,7 +2,7 @@
     <a class="me-3" href="/" >홈</a>
     <a class="me-3" href="/student/search">학생검색</a>
     <a class="me-3" href="/student/graph">학생그래프</a>
-    <a class="me-3" href="/shop/list">상품목록</a>
+    <a href="/student/info" class="me-3">학생정보</a>
 
     <span style="float:right;" class="ms-3" id="login">
         <a href="/users/login">로그인</a>
