--- a/web/ex05/templates/student/graph.html
+++ b/web/ex05/templates/student/graph.html
@@ -1,3 +1,4 @@
-<div class="my-4">
-    <h2 class="text-center">그래프</h2>
-</div>
+<div class="my-5">
+    <h1 class="text-center mb-5">학생성적그래프</h1>
+    <img src="/student/graph/image" width="100%">
+  </div>
