--- a/web/ex04/templates/index.html
+++ b/web/ex04/templates/index.html
@@ -10,6 +10,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/3.0.1/handlebars.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twbs-pagination/1.4.2/jquery.twbsPagination.min.js"></script>
     <title>{{title}}</title>
+    <style>
+        #loading {
+          position: absolute;
+          display: block;
+          left:40%;
+          top:40%;
+          display: none;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
